--- a/chromplug/manifest.json
+++ b/chromplug/manifest.json
@@ -17,8 +17,8 @@
     },
     "content_scripts": [
         {
-            "matches": ["*://www.vmall.com/","http://www.ip138.com/"],
-            "js": ["js/neworder.js"]
+            "matches": ["http://*.vmall.com/*"],
+            "js": ["js/jquery-3.1.1.slim.min.js","js/neworder.js"]
         }
     ],
     "permissions": [
